@@ -103,10 +103,10 @@ MOMPROCESSEDEXAMPLEFILES += contrib/mom/examples/typesetting.pdf
 endif
 momprocessedexampledir = $(exampledir)/mom
 nodist_momprocessedexample_DATA = $(MOMPROCESSEDEXAMPLEFILES)
+endif
 
 mom_test_template = contrib/mom/examples/test-mom.sh.in
 
-if HAVE_PDFTOOLS
 # Small test suite on mom examples
 mom_TESTS = contrib/mom/examples/tests-mom.sh
 TESTS += $(mom_TESTS)
@@ -120,8 +120,6 @@ contrib/mom/examples/tests-mom.sh: \
 	  $(top_srcdir)/$(mom_test_template) > $@ \
 	&& chmod +x $@
 MOSTLYCLEANFILES += $(mom_TESTS)
-endif
-endif
 EXTRA_DIST += $(mom_test_template)
 
 # For this list of files we add a symlink from $(exampledir)/mom to $(pdfdocdir)
